# IP-Spoofing-Detection

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: main.yml  master.yml  pr-to-main.yml
Neural-Network/: .gitignore
Packet-Generator/client/: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  package.json
Packet-Generator/client/public/: index.html
Packet-Generator/client/public/sass/: styles.scss
Packet-Generator/client/public/sass/utilities/: _variables.scss
Packet-Generator/client/src/: App.tsx
Packet-Generator/client/src/components/atoms/: Button.scss  CancelBtn.tsx  CheckBoxInputGroup.tsx  InputGroup.scss  (+4 more)
Packet-Generator/client/src/helpers/: helpers.ts  interfaces.ts
Packet-Generator/server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
Packet-Generator/server/src/: lib.rs  main.rs
Packet-Generator/server/src/api/: mod.rs  packet_req_res.rs  routes.rs
Packet-Generator/server/src/model/: mod.rs
Packet-Generator/server/src/model/networking/: ip_packet.rs  mod.rs  socket.rs  tcp.rs
Packet-Generator/server/src/model/networking/ipv4/: ip.rs  mod.rs  tcp_ip.rs
Packet-Generator/server/src/model/networking/ipv6/: ip.rs  mod.rs  tcp_ip.rs
Packet-Generator/server/src/model/utils/: arguments_manager.rs  legitimate_packets.rs  mod.rs  package_creator.rs
Traffic-Monitor/: Cargo.toml  Dockerfile  Makefile
Traffic-Monitor/TCP-Dump/: Dockerfile
Traffic-Monitor/src/: lib.rs  main.rs
Traffic-Monitor/src/model/: config.rs  frame.rs  http.rs  ip.rs  mod.rs  packet.rs  packet_parser.rs  sll.rs  strings_parser.rs  tcp.rs
(+5 files in other folders)
