[package]
name = "ip_traffic_monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "traffic-monitor"
path = "src/main.rs"

[dependencies]
clap = "^3" # To parse command line arguments
indicatif = "^0.16" # To display progress bars
rtshark = "^2" # To capture packets
slog = "^2" # To log messages
slog-term = "^2" # To log messages to the terminal
